# AngkorBanking_python

./: .gitignore  EXPLAIN.md  README.md  main.py  pyproject.toml  styles.qss
operations/: check_account.py  create_account.py  delete_account.py  deposit.py  transfer.py  update_account.py  withdrawal.py
src/angkor_banking/: __init__.py  __main__.py  app.py
src/angkor_banking/assets/: styles.qss
src/angkor_banking/assets/styles/: check_account.qss  create_account.qss  dashboard.qss  delete_account.qss  update_account.qss
src/angkor_banking/operations/: __init__.py  check_account.py  create_account.py  delete_account.py  deposit.py  transfer.py  update_account.py  withdrawal.py
styles/: deposit.qss  transfer.qss  update_account.qss  withdrawal.qss
